@@ -70,6 +70,7 @@ Bugs fixed
 * C++, add support for final classes.
 * C++, fix parsing of types prefixed with 'enum'.
 * #2023: Dutch search support uses Danish stemming info
+* C++, add support for user-defined literals.
 
 Documentation
 -------------
